--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </div> <!-- container -->
     </section>
 
-    <!--====== SERVICES PART ENDS ======-->
+    <!--====== SERVICES PART ENDS ======
 
     <section id="service" class="services-area gray-bg pt-15 pb-150">
         <div class="container">
@@ -293,9 +293,10 @@
                     <p >Oferujemy dekoracje balonami z helem z dojazdem do klienta.</p>				
                         </div>
                 <img src="assets/images/balon_3.png" alt="Logo" style="height: 120px; margin-left: 100px; transform: scaleX(-1) !important;">
-            </div> <!-- row -->
-        </div> <!-- container -->
+            </div> 
+        </div> 
     </section>
+	-->
 
 
     <!--====== CALL TO ACTION PART START ======-->
