--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Jesteśmy animatorami specjalizującymi się w animacjach dziecięcych. Staramy się edukować dzieci poprzez świetną zabawę. Wszystkie animacje prowadzone są przez wykwalifikowanych i doświadczonych Animatorów. Działamy na terenie całego województwa Pomorskiego.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+	<meta name="google-site-verification" content="nhCieQFtrqNMxab-uXb-xXKmWLfLBgdEicjhS7wNxho" />
+
     <!--====== Title ======-->
     <title>Kreacje Animacje Trójmiasto</title>
 
