fix polish typo

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center">
-                        <h5 class="title" style="font-size: 30px !important">Cześć! Nazywam się Martyna!</h5>
+                        <h5 class="title" style="font-size: 30px !important">Cześć! Mam na imię Martyna!</h5>
                         <p>Zapraszam Cię do świata pełnego zabawy, uśmiechu i niezapomnianych doświadczeń!
                             <br/><br/>
                             Specjalizujemy się w Animacji czasu wolnego dla dzieci podczas urodzin, uroczystości 
