--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Jesteśmy animatorami specjalizującymi się w animacjach dziecięcych. Staramy się edukować dzieci poprzez świetną zabawę. Wszystkie animacje prowadzone są przez wykwalifikowanych i doświadczonych Animatorów. Działamy na terenie całego województwa Pomorskiego.">
-    <meta name="keywords" content="animacje,kreacje,kreacje animacje,zabawy,dzieci,eventy,festyny,animator,animatorka,czas wolny, czas zabaw,opieka,gry,gry i zabawy,zabawy i gry,edukacja, animacje dzieciece,trojmiasto,gdynia,gdansk,animacje trojmiasto,animacje torjmiasto i okolice" />
+    <meta name="keywords" content="animacje,kreacje,kreacje animacje,zabawy,dzieci,eventy,festyny,animator,animatorka,czas wolny,czas zabaw,opieka,gry,gry i zabawy,zabawy i gry,edukacja, animacje dzieciece,trojmiasto,gdynia,gdansk,Gdynia,Gdańsk,animacje trójmiasto,animacje trójmiasto i okolice,animacje trojmiasto,animacje trojmiasto i okolice,animacje dla dzieci gdynia,animacje dla dzieci gdańsk,animacje dla dzieci reda,animacje dla dzieci rumia,animacje dla dzieci wejherowo,animacje dla dzieci sopot,animacje dla dzieci trójmiasto,urodziny dla dzieci gdynia,urodziny dla dzieci gdańsk,urodziny dla dzieci reda,urodziny dla dzieci rumia,urodziny dla dzieci sopot,animacje,animacje dla dzieci,animatorki,urodziny,urodziny dla dzieci,animacje na urodzinach,animacje na weselu,bańki mydlane,malowanie twarzy,tatuaże brokatowe,wata cukrowa,wata cukrowa na weselu,animacje w przedszkolu,bal karnawałowy w przedszkolu,wynajem animatorów,zabawy dla dzieci,balony,balonowe pieski,wynajem św. mikołaja,wynajem mikołaja,mikołaj,św. mikołaj,św. mikołaj w domu,mikołaj w domu,mikołaj na wigilię,wynajem mikołaja na wigilię,wynajem mikołaja do domu" />
     <meta name="robots" content="index, follow" />
 	
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,11 +15,11 @@
     <meta name="google-site-verification" content="nhCieQFtrqNMxab-uXb-xXKmWLfLBgdEicjhS7wNxho" />
 
     <!--====== Title ======-->
-    <title>Kreacje Animacje Trójmiasto</title>
+    <title>Kreacje Animacje - Animacje dla dzieci Trójmiasto i okolice</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
 
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
@@ -337,7 +337,7 @@
                         <div class="work-overlay">
                             <div class="work-content">
                                 <ul>
-                                    <li><a class="image-popup" href="assets/photos/foto_2.jpg"><i class="fas fa-search-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/photos/foto_2.JPG"><i class="fas fa-search-plus"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -365,7 +365,7 @@
                         <div class="work-overlay">
                             <div class="work-content">
                                 <ul>
-                                    <li><a class="image-popup" href="assets/photos/foto_5.JPG"><i class="fas fa-search-plus"></i></a></li>
+                                    <li><a class="image-popup" href="assets/photos/foto_5.jpg"><i class="fas fa-search-plus"></i></a></li>
                                 </ul>
                             </div>
                         </div>
