--- a/index.html
+++ b/index.html
@@ -626,15 +626,16 @@
 				  settings: {
 					slidesToShow: 3,
 					slidesToScroll: 3,
+					dots: true,
+					autoplay: true,
+					infinite: true,
 				  }
 				},
 				{
 				  breakpoint: 600,
 				  settings: {
 					slidesToShow: 2,
-					slidesPerRow: 2,
-					rows: 2,
-					dots: true,
+					dots: false,
 					autoplay: true,
 					infinite: true,
 				  }
@@ -643,9 +644,7 @@
 				  breakpoint: 480,
 				  settings: {
 					slidesToShow: 2,
-					slidesPerRow: 2,
-					rows: 2,
-					dots: true,
+					dots: false,
 					autoplay: true,
 					infinite: true,
 				  }
