fixed image names

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini_1.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini_1.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -506,7 +506,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini_2.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini_2.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -520,7 +520,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini_3.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini_3.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -534,7 +534,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 gallery-row-2">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini_4.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini_4.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -548,7 +548,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 gallery-row-2">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini_5.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini_5.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
