fixed image addresses

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini1.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini1.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -490,7 +490,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini2.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini2.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -504,7 +504,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini3.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini3.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -518,7 +518,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 gallery-row-2">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini4.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini4.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
@@ -532,7 +532,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 gallery-row-2">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/photos/miniatures/mini5.JPG" alt="work photo minature" style="height: 360px; width: 360px;">
+                            <img src="assets/photos/miniatures/mini5.jpg" alt="work photo minature" style="height: 360px; width: 360px;">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
