added google maps for seo

--- a/index.html
+++ b/index.html
@@ -413,21 +413,21 @@
                             <h4 class="service-title">Pakiety animacyjne zawierają</h4>
                             <br/><br/>
                             <p>
-						<ul style="list-style-type:disc; text-align: left; margin-left: 25px;">
-							<li>układy taneczne</li>
-							<li>pokaz oraz nauka modelowania balonów</li>
-							<li>malowanie twarzy</li>
-							
-							<li>wielkie bańki mydlane</li>							
-							<li>efektowne brokatowe oraz zmywalne tatuaże</li>							
-							<li>gry i zabawy ruchowe dostosowane do wieku dzieci</li>							
-							<li>zabawy z hustą animacyjną</li>							
-							<li>słomki konstrukcyjne</li>							
-							<li>konkurencje sportowe (przeciąganie liny, skoki w workach, rzut do celu itp.)</li>							
-							<li>elementy plastyczne</li>
-						</ul>
-                        <br/><br/>
-						Na życzenie piniata wypełniona cukierkani (90 zł)
+							<ul style="list-style-type:disc; text-align: left; margin-left: 25px;">
+								<li>układy taneczne</li>
+								<li>pokaz oraz nauka modelowania balonów</li>
+								<li>malowanie twarzy</li>
+								
+								<li>wielkie bańki mydlane</li>							
+								<li>efektowne brokatowe oraz zmywalne tatuaże</li>							
+								<li>gry i zabawy ruchowe dostosowane do wieku dzieci</li>							
+								<li>zabawy z hustą animacyjną</li>							
+								<li>słomki konstrukcyjne</li>							
+								<li>konkurencje sportowe (przeciąganie liny, skoki w workach, rzut do celu itp.)</li>							
+								<li>elementy plastyczne</li>
+							</ul>
+							<br/><br/>
+							Na życzenie piniata wypełniona cukierkani (90 zł)
 							</p>
                         </div>
                     </div> <!-- single service -->
@@ -562,7 +562,7 @@
     </section>
     <!--====== WORK PART ENDS ======-->
 
-    <!--====== BLOG PART START ======-->	
+    <!--====== CLIENTS PART START ======-->	
     <section id="blog" class="blog-area" style="padding-bottom:0px;">
         <div class="container">
             <div class="row">
@@ -679,8 +679,8 @@
                             <p>kreacjeanimacje@gmail.com</p>
                         </div>
                     </div> <!-- contact box -->
-                </div>
-            </div> <!-- row -->
+                </div>		
+			</div> <!-- row -->
         </div> <!-- container -->
 		
 		 <div class="container">           
@@ -727,14 +727,20 @@
 					<button type="submit" class="btn btn-primary" style="width: 100px; background-color: #68c3ec; border-color: #68c3ec;">Wyslij</button>
 				  </div>  
 				</form>			   
-            </div> <!-- row -->			
+            </div> <!-- row -->		
+			
+			<div class="container">           
+				<div class="row justify-content-center" style="margin-right: 0px; margin-left: 0px; margin-top: 50px;">
+					<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Morenowe%20Wzg%C3%B3rze%207%2C%20Gda%C5%84sk%2C%20Poland&key=AIzaSyApncnLnX9BAf0xynGhtoxLjLJULtOABbo" allowfullscreen></iframe>
+				</div> 
+			</div> <!-- row -->		
         </div> <!-- container -->		
     </section>	
     <!--====== CONTACT PART ENDS ======-->
 
     <!--====== FOOTER PART START ======-->
     <footer id="footer" class="footer-area">
-        <div class="footer-widget pt-50 pb-50" style="background-color: #B3E5FC">
+		<div class="footer-widget pt-50 pb-50" style="background-color: #B3E5FC">
             <div class="container">			
                 <img class="img-left" src="assets/images/balon1.png" alt="baloon image">							
                 <img class="img-right" src="assets/images/balon3.png" alt="baloon image">
