fixed date range select center on mobile

--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
 
     <!--====== Style css ======-->
     <link rel="stylesheet" href="assets/css/style.min.css">
-
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/slick-theme.css">
-
-    <!--====== Style css ======-->
     <link rel="stylesheet" href="assets/css/slider.css">
     <link rel="stylesheet" href="assets/css/cookies.css">
+    <link rel="stylesheet" href="assets/css/mobile.css">
 </head>
 
 <body>
