--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 				</form>			   
             </div> <!-- row -->		
 			
-			<div class="container">           
+			<!--div class="container">           
 				<div class="row justify-content-center" style="margin-right: 0px; margin-left: 0px; margin-top: 50px;">
 					<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Morenowe%20Wzg%C3%B3rze%207%2C%20Gda%C5%84sk%2C%20Poland&key=AIzaSyApncnLnX9BAf0xynGhtoxLjLJULtOABbo" allowfullscreen></iframe>
 				</div> 
