hide vacation banner

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
 	  gtag('js', new Date());
 	  gtag('config', 'UA-116468876-2');
 	</script>
-
+vaacation-info
 	<script type="application/ld+json">
 	  {
 		"@context": "http://schema.org",
@@ -895,13 +895,13 @@
 	  }
 	</script>
 	
-	<script>
+	<!--script>
 		jQuery(document).ready(function($){		  
 			window.onload = function (){		  
 				$('.vaacation-info').delay(100).modal('show');
 			}
 		});
-	</script>
+	</script-->
 	
 	<!--====== Email js ======-->
     <script src="assets/js/smtp.js"></script>
@@ -937,7 +937,7 @@
 	  </div>
 	</div>
 	
-	<div class="vaacation-info modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="margin-top: 225px;">
+	<!--div class="vaacation-info modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="margin-top: 225px;">
 	  <div class="modal-dialog modal-sm">
 		<div class="modal-content" style="padding: 45px; text-align:center;">
 		  Kochani! W terminie 7.03-22.03 jestem na urlopie.
@@ -949,7 +949,7 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
 		</div>
 	  </div>
-	</div>
+	</div-->
 	
 </body>
 
