--- a/index.html
+++ b/index.html
@@ -427,13 +427,13 @@
 								<li>wielkie bańki mydlane</li>							
 								<li>efektowne brokatowe oraz zmywalne tatuaże</li>							
 								<li>gry i zabawy ruchowe dostosowane do wieku dzieci</li>							
-								<li>zabawy z hustą animacyjną</li>							
+								<li>zabawy z chustą animacyjną</li>							
 								<li>słomki konstrukcyjne</li>							
 								<li>konkurencje sportowe (przeciąganie liny, skoki w workach, rzut do celu itp.)</li>							
 								<li>elementy plastyczne</li>
 							</ul>
 							<br/><br/>
-							Na życzenie piniata wypełniona cukierkani (90 zł)
+							Na życzenie piniata wypełniona cukierkami (90 zł)
 							</p>
                         </div>
                     </div> <!-- single service -->
