improved text visibility, replaced PLN with ZŁ

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
-                            <h1 class="title" style="color: #F9C279; font-size: 38px;">
+                            <h1 class="title" style="color: #ffac3f; font-size: 38px;">
                                 Animacje<br/> 
                                 dla<br/> 
                                 dzieci
@@ -338,7 +338,7 @@
 							</div>
                             <br/>
                             <br/>
-                            <h4 id="birthday-price">300 PLN</h4>	
+                            <h4 id="birthday-price">300 ZŁ</h4>	
                             <br/>						
 							  <label class="mr-sm-2" for="inlineFormCustomSelect">Cena zawiera: <br/>
 							  <ul style="list-style-type:disc; text-align: left; margin-left: 25px;">
@@ -376,7 +376,7 @@
 							</div>	
                             <br/>
                             <br/>
-                            <h4 id="wedding-price">500 PLN</h4>	
+                            <h4 id="wedding-price">500 ZŁ</h4>	
                             <br/>						
 							  <label class="mr-sm-2" for="inlineFormCustomSelect">Cena zawiera: <br/>
 							  <ul style="list-style-type:disc; text-align: left; margin-left: 25px;">
@@ -404,7 +404,7 @@
                             <h4 id="workshops-price">45 min</h4>	
 							</div>	
                             <br/>
-                            <h4 id="workshops-price">15 - 20 PLN od osoby</h4>
+                            <h4 id="workshops-price">15 - 20 ZŁ od osoby</h4>
 							(min. 10 osob)
                             <br/>	 <br/>					
 							  <label class="mr-sm-2" for="inlineFormCustomSelect">Rodzaje warsztatów: <br/>
@@ -451,7 +451,7 @@
 								<li>Eko torby - ozdabianie toreb według wzoru</li>
 							  </ul>
 								<br/>
-								Warsztaty dodatkowo płatne +50 PLN za materiały  <br/>
+								Warsztaty dodatkowo płatne +50 ZŁ za materiały  <br/>
 								(czas wliczony do animiacji ok 30 min)
 							</p>
                         </div>
