--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center">
-                        <h5 class="title" style="font-size: 30px !important">Cześć! Mam na imię Martyna!</h5>
-                        <p>Zapraszam Cię do świata pełnego zabawy, uśmiechu i niezapomnianych doświadczeń!
+                        <h5 class="title" style="font-size: 30px !important">Cześć!</h5>
+                        <p>Zapraszamy do świata pełnego zabawy, uśmiechu i niezapomnianych doświadczeń!
                             <br/><br/>
                             Specjalizujemy się w Animacji czasu wolnego dla dzieci podczas urodzin, uroczystości 
                             rodzinnych, przedszkolnych oraz eventów firmowych.
@@ -339,7 +339,7 @@
 							</div>
                             <br/>
                             <br/>
-                            <h4 id="birthday-price">300 ZŁ</h4>	
+                            <h4 id="birthday-price">350 ZŁ</h4>	
                             <br/>						
 							  <label class="mr-sm-2" for="inlineFormCustomSelect">Cena zawiera: <br/>
 							  <ul style="list-style-type:disc; text-align: left; margin-left: 25px;">
