added vacation info

--- a/index.html
+++ b/index.html
@@ -917,13 +917,13 @@
 	  }
 	</script>
 	
-	<!--script>
+	<script>
 		jQuery(document).ready(function($){		  
 			window.onload = function (){		  
 				$('.vaacation-info').delay(100).modal('show');
 			}
 		});
-	</script-->
+	</script>
 	
 	<!--====== Email js ======-->
     <script src="assets/js/smtp.js"></script>
@@ -959,19 +959,19 @@
 	  </div>
 	</div>
 	
-	<!--div class="vaacation-info modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="margin-top: 225px;">
+	<div class="vaacation-info modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="margin-top: 225px;">
 	  <div class="modal-dialog modal-sm">
 		<div class="modal-content" style="padding: 45px; text-align:center;">
-		  Kochani! W terminie 7.03-22.03 jestem na urlopie.
+		  Kochani! W terminie 28.04-02.05 jestem na urlopie.
 		  <br/>
 		  <br/>
-		  Prosze o kontakt mailowy albo poprzez formularz znajdujacy się na dole strony.
+		  Prosze o kontakt mailowy!
 		  <br/>
 		  <br/>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
 		</div>
 	  </div>
-	</div-->
+	</div>
 	
 </body>
 
