updated prices, updatet info window, minor adjustments

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 							</div>
                             <br/>
                             <br/>
-                            <h4 id="birthday-price">350 ZŁ</h4>	
+                            <h4 id="birthday-price">500 ZŁ</h4>	
                             <br/>						
 							  <label class="mr-sm-2" for="inlineFormCustomSelect">Cena zawiera: <br/>
 							  <ul style="list-style-type:disc; text-align: left; margin-left: 25px;">
@@ -377,7 +377,7 @@
 							</div>	
                             <br/>
                             <br/>
-                            <h4 id="wedding-price">600 ZŁ</h4>	
+                            <h4 id="wedding-price">650 ZŁ</h4>	
                             <br/>						
 							  <label class="mr-sm-2" for="inlineFormCustomSelect">Cena zawiera: <br/>
 							  <ul style="list-style-type:disc; text-align: left; margin-left: 25px;">
@@ -446,14 +446,11 @@
 							<br/><br/>
 							Warsztaty:
 							<ul style="list-style-type:disc; text-align: left; margin-left: 25px;"> 
-								<li>Lego - kreatywne budowanie</li>
-								<li>Slime - każde dziecko wykona swojego własnego gluta</li>
-								<li>Ceramika - ozdoby z masy porcelanowej</li>
-								<li>Eko torby - ozdabianie toreb według wzoru</li>
-							  </ul>
-								<br/>
-								Warsztaty dodatkowo płatne +50 ZŁ za materiały (eko torby 80 ZŁ)  <br/>
-								(czas wliczony do animiacji ok 30 min)
+								<li>Lego (5zł od osoby) - kreatywne budowanie</li>
+								<li>Slime (8 zł od osoby) - każde dziecko wykona swojego własnego gluta</li>
+								<li>Ceramika (8 zł od osoby) - ozdoby z masy porcelanowej</li>
+								<li>Eko torby (10 zł od osoby) - ozdabianie toreb według wzoru</li>
+							</ul>                                
 							</p>
                         </div>
                     </div> <!-- single service -->
@@ -962,13 +959,18 @@
 	<div class="vaacation-info modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="margin-top: 225px;">
 	  <div class="modal-dialog modal-sm">
 		<div class="modal-content" style="padding: 45px; text-align:center;">
-		  Kochani! W terminie 28.04-02.05 jestem na urlopie.
+            <div class="service-icon">
+                <i class="fas fa-calendar" style="color: #f57cb0; font-size: 48px;"></i>
+            </div>
+            <br />
+		  Mamy ostatnie wolne terminu w maju!
 		  <br/>
 		  <br/>
-		  Prosze o kontakt mailowy!
+		  Serdecznie zapraszamy do kontaktu i rezerwacji!
 		  <br/>
 		  <br/>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
+          <br />
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: #e9bc8e; border-color: #e9bc8e;">Zamknij</button>
 		</div>
 	  </div>
 	</div>
