changed notif message

--- a/index.html
+++ b/index.html
@@ -961,13 +961,10 @@
                 <i class="fas fa-calendar" style="color: #f57cb0; font-size: 48px;"></i>
             </div>
             <br />
-		  Mamy ostatnie wolne terminu w maju!
-		  <br/>
-		  <br/>
-		  Serdecznie zapraszamy do kontaktu i rezerwacji!
-		  <br/>
-		  <br/>
-          <br />
+            W terminie 30.05-13.06 bardzo proszę o kontakt mailowy.
+		    <br/>
+		    <br/>
+            <br />
           <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: #e9bc8e; border-color: #e9bc8e;">Zamknij</button>
 		</div>
 	  </div>
