removed vacation info

--- a/index.html
+++ b/index.html
@@ -912,6 +912,7 @@
 	  }
 	</script>
 	
+	<!--
 	<script>
 		jQuery(document).ready(function($){		  
 			window.onload = function (){		  
@@ -919,6 +920,7 @@
 			}
 		});
 	</script>
+    -->
 	
 	<!--====== Email js ======-->
     <script src="assets/js/smtp.js"></script>
@@ -953,8 +955,8 @@
 		</div>
 	  </div>
 	</div>
-	
-	<div class="vaacation-info modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="margin-top: 225px;">
+	<!--
+	</div class="vaacation-info modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="margin-top: 225px;">
 	  <div class="modal-dialog modal-sm">
 		<div class="modal-content" style="padding: 45px; text-align:center;">
             <div class="service-icon">
@@ -969,6 +971,7 @@
 		</div>
 	  </div>
 	</div>
+    -->
 	
 </body>
 
