--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                             <i class="fas fa-birthday-cake"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title">Animacje Urodzinowe i okolicznościowe</h4>
+                            <h4 class="service-title">Animacje urodzinowe i okolicznościowe</h4>
                             <br/>
                             <p>
 							<div class="col-auto my-1">
@@ -358,7 +358,7 @@
                             <i class="fas fa-heart"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title">Animacje na weselu i poprawinach</h4>
+                            <h4 class="service-title">Animacje weselne i komunijne</h4>
                             <br/>
                             <p>
 							<div class="col-auto my-1">
