fixed invalid price, added text

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 							</div>
                             <br/>
                             <br/>
-                            <h4 id="birthday-price">350 ZŁ</h4>	
+                            <h4 id="birthday-price">500 ZŁ</h4>	
                             <br/>					
                             <ul>
                                 <li><a title="Oferta PDF" class="main-btn custom" style="background-color: #fff !important;" href="assets/pdf/oferta_2023.pdf">pełna oferta</a></li>
@@ -470,6 +470,8 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center">
                         <p>
+                        Podane ceny obowiązują do 15 dzieci.
+                        </br>
                         Pozostale animacje wyceniamy indywidualnie - zapraszamy do kontaktu!
                         <br/>
                     </div> <!-- section title -->
