--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     </div>
                 </div> <!-- row -->
                 <div class="row nav-contact">
-                    <a href="tel:+48 507 326 149"><i class="fas fa-mobile-alt"></i> +48 507 326 149</a>                    
-                    <a  style="margin-left: 20px;"href="mailto:kreacjeanimacje@gmail.com"><i class="fas fa-envelope" ></i> kreacjeanimacje@gmail.com</a>
+                    <a class="nav-phone" href="tel:+48 507 326 149"><i class="fas fa-mobile-alt"></i> +48 507 326 149</a>                    
+                    <a class="nav-email" href="mailto:kreacjeanimacje@gmail.com"><i class="fas fa-envelope" ></i> kreacjeanimacje@gmail.com</a>
                 </div>
         </div> <!-- navigation -->
 
