--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             <br/><br/>
                             <p>
 							Zapraszamy do zorganizowanie warsztatów edukacyjnych. Realizujemy warsztaty 
-							w szkołach, przedszkolach i restauracjach. Warsztaty senoryczne gniotki,  <br/>eko-torby, slime, lego, ceramika.
+							w szkołach, przedszkolach i restauracjach. Warsztaty senoryczne gniotki,  <br/>eko-torby, lego, ceramika.
 							<br/><br/>
 							Każde animacje można połączyć z warsztatami.
                             </p>
@@ -581,8 +581,6 @@
                             <li><span style="color: #f9c27a;"><b>Lego kreatywne budowanie</b></span> - każde dziecko otrzymuje tackę i wraz z animatorem buduje
                                 według wybranego tematu. Zalecane dla dzieci w wieku przedszkolnym (+5 zł/dziecko) </li>
                             <li><span style="color: #f9c27a;"><b>Ceramika</b></span> z wykorzystaniem samoutwardzalnej masy ceramicznej  (+10 zł/dziecko)</li>
-                            <li><span style="color: #f9c27a;"><b>Slime</b></span> - dzieci z pomocą animatora wykonają swoje gluty. Warsztaty wykonujemy tylko podczas urodzin w domu. 
-                                Odpowiednie dla dzieci w wieku od 7 lat (+10 zł/dziecko)</li>
                         </ul>        
 
                         <br><br>
