fixed another typo

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                             <i class="fas fa-theater-masks"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title">Bale w karnawałowe</h4>
+                            <h4 class="service-title">Bale karnawałowe</h4>
                             <br/><br/>
                             <p>
 								Halloween, mikołajki, bal karnawałowy!
