update workshop section

--- a/index.html
+++ b/index.html
@@ -547,13 +547,18 @@
                                 zabierają torby na pamiątkę. Zalecane dla dzieci w wieku 5-12 lat (+20 zł/dziecko) <b style="color: #f57cb0;">HIT</b></li>
                             <li><span style="color: #f9c27a;"><b>Sensoryczne gniotki</b></span> - dzieci wykonają samodzielnie antystresową piłeczkę z wykorzystaniem
                                 kulek hydrożelowych orbis. Zalecane dla dzieci w wieku 5-12 lat. (+15 zł/dziecko) <b style="color: #f57cb0;">HIT</b></li>
+                            
+                            <li><span style="color: #f9c27a;"><b>Przypinki</b></span> - Dzieci mogą zaprojektować oraz samodzielnie wykonać przypinkę.  
+                                Zadaniem jest narysować swój wzór lub podpisać własnym imieniem, a następnie wkłada się ją do specjalnie maszyny i „wybija”.
+                                Przypinka może stanowić wspaniałą pamiątkę po imprezie. (+15 zł/dziecko) <b style="color: #f57cb0;">NOWOŚĆ</b></li>
+                                                            
                             <li><span style="color: #f9c27a;"><b>Breloki</b></span> - Dzieci będą miały możliwość zaprojektować i wykonać własne breloczki 
                                 do kluczy lub telefonu (+20 zł/dziecko) <b style="color: #f57cb0;">NOWOŚĆ</b></li>
                             <li><span style="color: #f9c27a;"><b>Malowanie figurek gipsowych</b></span> - warsztat polega na malowaniu i ozdabianiu gipsowych 
                                 figur (+15 zł/dziecko) <b style="color: #f57cb0;">NOWOŚĆ</b></li>
                             <li><span style="color: #f9c27a;"><b>Lego kreatywne budowanie</b></span> - każde dziecko otrzymuje tackę i wraz z animatorem buduje
                                 według wybranego tematu. Zalecane dla dzieci w wieku przedszkolnym (+5 zł/dziecko) </li>
-                            <li><span style="color: #f9c27a;"><b>Ceramika</b></span> z wykorzystaniem samoutwardzalnej masy ceramicznej  (+10 zł/dziecko)</li>
+                            <!--li><span style="color: #f9c27a;"><b>Ceramika</b></span> z wykorzystaniem samoutwardzalnej masy ceramicznej  (+10 zł/dziecko)</li-->
                         </ul>        
 
                         <br><br>
